<resources>
    <string name="app_name">Dream Guard</string>
    <string name="button_login">Login</string>
    <string name="button_forgot">Continue</string>
    <string name="button_predict">Continue</string>
    <string name="button_verify">Verify</string>
    <string name="button_started">Let’s get started</string>
    <string name="button_register">Register</string>
    <string name="button_sign">I’m new, sign me up</string>
    <string name="button_google">Google</string>
    <string name="error_empty_fields">Please fill in all fields.</string>
    <string name="error_password_mismatch">Passwords do not match.</string>
    <string name="success_change_password">Password changed successfully.</string>
    <string name="error_change_password">Failed to change password. Please try again.</string>
    <string name="error_feedback_empty_fields">Feedback cannot be empty.</string>
    <string name="success_feedback_added">Feedback successfully added!</string>
    <string name="error_feedback_failed">Failed to add feedback.</string>
    <string name="image">image</string>
    <string name="title_onboarding">Sleep better, live better</string>
    <string name="title_started">Welcome to DreamGuard</string>
    <string name="describe_onboarding">Transform your nights with DreamGuard. Join us to improve your sleep quality and take control of your well-being</string>
    <string name="describe_started">To understand your sleep, please answer a few questions from us. Your honest answers will make the results more accurate. The information you provide will be used for our sleep analysis models, and your privacy will be strictly protected</string>
    <string name="title_login">Log in to your\naccount</string>
    <string name="title_register">Register your\naccount</string>
    <string name="title_forgot">Forgot\npassword</string>
    <string name="title_verify">Almost\nthere!</string>
    <string name="describe_forgot">Enter your email address to reset password</string>
    <string name="describe_verify">One more step to go</string>
    <string name="describe_login">Stay connected to your sleep health journey</string>
    <string name="describe_prediction_gender">In order to provide a suitable result for you, we need to know your gender</string>
    <string name="describe_prediction_age">In order to provide a suitable result for you, we need to know your age</string>
    <string name="describe_prediction_hour">In order to provide a suitable result for you, we need to know how many hours you sleep a day</string>
    <string name="describe_register">Your journey to better sleep continues here</string>
    <string name="label_email">Email address</string>
    <string name="label_name">Your name</string>
    <string name="label_repassword">Repeat Password</string>
    <string name="text_verify">Verify your email address</string>
    <string name="text_information_email">Just follow the link we sent to:</string>
    <string name="text_email">dreamguard@gmail.com</string>
    <string name="text_verify_information">If you don’t receive an email, you can resend the verification email in 0:%1$s</string>
    <string name="label_password">Password</string>
    <string name="question">QUESTION</string>
    <string name="link_login">Don’t have an account?</string>
    <string name="link_register">Already have an account?</string>
    <string name="link_register2">Login</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>
    <string name="one">1/9</string>
    <string name="two">2/9</string>
    <string name="tree">3/9</string>
    <string name="four">4/9</string>
    <string name="five">5/9</string>
    <string name="six">6/9</string>
    <string name="seven">7/9</string>
    <string name="eight">8/9</string>
    <string name="nine">9/9</string>
    <string name="quest_gender">Which one are you?</string>
    <string name="quest_age">How old are you?</string>
    <string name="quest_hour_sleep">How many hours do you \nsleep a day?</string>
    <string name="quest_scale_sleep">On a scale of 1 to 10, what is your sleep quality?</string>
    <string name="quest_scale_stress">On a scale of 1 to 10, what is \nyour activity and stress level?</string>
    <string name="quest_scale_data">What is your weight (kg) \nand height (cm)?</string>
    <string name="quest_daily">How many daily steps do you take in a day?</string>
    <string name="quest_heart_rate">What is your current heart rate, systolic blood pressure, and diastolic blood pressure?</string>
    <string name="quest_occupation">What is your current occupation?</string>
    <string name="link_login2">Register</string>
    <string name="link_forgot">Forgot Password?</string>
    <string name="legend">Or login with</string>
    <string name="legend_register">Or register with</string>
    <string name="embed_age">I am </string>
    <string name="embed_sleep">I sleep </string>
    <string name="embed_quality">My sleep quality is:</string>
    <string name="embed_stress">My stress level is:</string>
    <string name="embed_height">My height is:</string>
    <string name="embed_act">My activity level is:</string>
    <string name="embed_weight">My weight is:</string>
    <string name="embed_daily">My daily steps a day is:</string>
    <string name="embed_heart">My heart rate is:</string>
    <string name="embed_blood">My systolic blood pressure is:</string>
    <string name="embed_diastolic">My diastolic blood pressure is:</string>
    <string name="embed_occupation">My current \noccupation is a:</string>
    <string name="describe_quality">In order to provide a suitable result for you, we need to know your sleep quality on a scale of 1 to 10 (1 is poor, 10 is good)</string>
    <string name="describe_stress">In order to provide a suitable result for you, we need to know your activity level (1 very low, 100 is very high) and stress level (1 is very low, 10 is very high)</string>
    <string name="describe_data">In order to provide a suitable result for you, we need to know weight and height for calculating your BMI. For better accuracy, you can use a suitable tool for measuring</string>
    <string name="describe_occupation">In order to provide a suitable result for you, we need to know your current occupation</string>
    <string name="describe_steps">In order to provide a suitable result for you, we need to know your daily steps in a day. If you not keeping track, you can spend a day and use a pedometer or step counter app to count your step</string>
    <string name="describe_heart_rate">In order to provide a suitable result for you, we need to know this information. You can use a tensimeter to find out all three. If you are confused about which one is which, you can see the instructions in this article</string>
    <string name="embed_age2">years old</string>
    <string name="embed_sleep2">hours a day</string>
    <string name="embed_age_num"> 19 </string>
    <string name="embed_kg">19 KG</string>
    <string name="embed_hg">190 CM</string>
    <string name="predict_result">Prediction Result</string>
    <string name="tips_insomnia"><font color="#7165E3">Make your bedroom your sleep sanctuary: </font>it cool, quiet, and dark. And ditch the TV or screen time before bed—those blue lights mess with your sleep-wake cycle, making it harder to fall asleep.</string>
    <string name="tips_insomnia4"><font color="#7165E3">Get moving, but not too late: </font>Aim for regular physical activity during the day—just make sure to wrap it up at least 5–6 hours before bed, so you don’t end up too wired to sleep.</string>
    <string name="tips_insomnia3"><font color="#7165E3">Watch what you consume: </font>Avoid caffeine, nicotine, and alcohol close to bedtime. While alcohol might help you drift off initially, it can disrupt your sleep later in the night, leaving you wide awake.</string>
    <string name="tips_insomnia5"><font color="#7165E3">No afternoon naps: </font>As tempting as they are, naps can mess with your ability to sleep well at night. Keep your nap short or skip it altogether.</string>
    <string name="tips_insomnia6"><font color="#7165E3">Eat at regular times: </font>Avoid heavy meals right before bed. Your body will thank you for keeping your digestive system on a regular schedule.</string>
    <string name="tips_insomnia7"><font color="#7165E3">Manage your stress: </font>Try winding down with a calming routine—read a book, listen to soothing music, or take a relaxing bath. If stress is still hanging around, yoga, meditation, or even acupuncture could do wonders.</string>
    <string name="tips_insomnia8"><font color="#7165E3">Be mindful of meds: </font>Certain over-the-counter or prescription drugs can mess with your sleep. Talk to your doctor about alternatives if needed.</string>
    <string name="tips_insomnia2"><font color="#7165E3">Stick to a sleep schedule: </font> Try to go to bed and wake up around the same time each day, even on weekends. Consistency is key to training your body’s internal clock.</string>
    <string name="desc_result_insomnia">We\'ve noticed signs that you might be experiencing insomnia, which could be affecting your sleep quality. It\'s important to address this early to prevent it from impacting your overall health. Focus on establishing a consistent sleep routine, managing stress, and creating a relaxing bedtime environment. Taking steps now can help improve your sleep and well-being. Remember, you\'re not alone in this, and with the right strategies, you can get your sleep back on track!</string>
    <string name="identify_insomnia">We have Identified <font color="#7EE4E0">Sleep Insomnia</font> In Your Results</string>
    <string name="desc_result_cbt2">Here’s what CBT-I includes:</string>
    <string name="desc_result_insomnia2">Here are some practical and easy-to-follow tips to help you reclaim your restful nights:</string>
    <string name="desc_cbt">But if these tips don\'t do the trick, don’t worry—<font color="#7165E3">Cognitive Behavioral Therapy for Insomnia (CBT–I)</font> might be your next step! This 6–8 week program is designed to help you fall asleep faster and stay asleep longer, by teaching you practical sleep skills and helping you break the cycle of sleepless nights. Plus, it’s effective for long-term insomnia. <font color="#7165E3">CBT-I can be done by a doctor, nurse, or therapist;</font> you can do it in person, by telephone, or online.</string>
    <string name="tips_cbt"><font color="#7165E3">Cognitive therapy: </font>Helps you stop stressing about not sleeping, which ironically makes it easier to sleep.</string>
    <string name="tips_cbt2"><font color="#7165E3">Relaxation/meditation therapy: </font> you how to calm your mind and fall asleep faster.</string>
    <string name="tips_cbt3"><font color="#7165E3">Sleep education: </font> you build good sleep habits that last.</string>
    <string name="tips_cbt4"><font color="#7165E3">Sleep restriction therapy: </font> counterintuitive, but by limiting the time you spend in bed, you’ll gradually start to sleep better and longer.</string>
    <string name="tips_cbt5"><font color="#7165E3">Stimulus control therapy: </font> you associate your bed with sleep, not tossing and turning. You’ll learn to only go to bed when sleepy, get up if you can’t sleep, and reserve your bed for sleeping (and, you know, other activities).</string>
    <string name="text_result_insomnia2">Ready to sleep like a champ? Start with these tips, and if needed, give CBT-I a go! Your best sleep is just around the corner.</string>
    <string name="date">2 Desember 2022</string>
    <string name="icon">icon</string>
    <string name="okay">Okay</string>
    <string name="username">Good morning, Kaylee</string>
    <string name="mess_actual_schedule">Actual sleep time report added</string>
    <string name="desc_msgAddActualSchedule">Your actual sleep time report is added successfully</string>
</resources>