<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/msg_sleep_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="32dp"
        android:backgroundTint="@color/white"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:cardCornerRadius="32dp"
                android:backgroundTint="@color/purple"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/message_coloured"
                    android:layout_gravity="center" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/mess_actual_schedule"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/desc_msgAddActualSchedule"
                android:textAppearance="?attr/textAppearanceBody2" />

            <Button
                android:id="@+id/dismissButton"
                android:layout_width="match_parent"
                app:cornerRadius="8dp"
                android:fontFamily="@font/poppins_medium"
                android:backgroundTint="@color/purple"
                android:layout_height="wrap_content"
                android:text="@string/okay" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>